syntax = "proto3";

package com.example.grpc.route;

service RouteServiceProto{
  rpc FindShortestRoute(FindRouteMessage) returns (ShortRoute);
}

message FindRouteMessage{

}

message ShortRoute{
  repeated string point=1;
}